Overflow fixed for desktop screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 10px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -106,7 +106,7 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: auto;
   background-color: #3397DB;
   align-items: center;
 }
@@ -129,31 +129,40 @@ nav h1 a {
   width: 200px;
 }
 
+@media only screen and (max-width: 600px) {
+    .filter-options select {
+        width: 90%;
+
+    }
+}
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
+  display: inline;
   list-style: outside none none;
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  width: 100%;
+  height: auto;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
+  display: block;
   font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
+  margin: 10px;
+  padding: 15px;
   text-align: left;
-  width: 270px;
+  width: 40%;
+  height:auto;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
-  max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  width: 100%;
+  height: auto;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -162,7 +171,7 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 10px 0 10px;
   text-transform: uppercase;
 }
 #restaurants-list p {
@@ -180,6 +189,13 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+@media only screen and (max-width: 600px) {
+    #restaurants-list li {
+        width: 85%;
+
+    }
 }
 
 /* ====================== Restaurant Details ====================== */
@@ -218,7 +234,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+  width: 90%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,16 +250,20 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+  width: 90%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 140px 20px 30px;
   width: 50%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  /*padding: 30px 20px 80px;*/
+  padding-left: 2%;
+  padding-top: 30px;
+  padding-bottom: 80px;
+  padding-right: 2%;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -263,7 +283,7 @@ nav h1 a {
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 3%;
   position: relative;
   width: 85%;
 }
